web-app/src/main/resources/com/preferanser/client/application/mvp/table.css
@external .not-displayed;
.not-displayed {
    display: none;
}

@external .not-visible;
.not-visible {
    visibility: hidden;
}

.buttonsPanel td {
    vertical-align: middle ! important;
}

.titleEast, .titleSouth, .titleWest, .handHeaderLeftPanel {
    float: left;
}

.trickCountWidow, .trickCountEast, .trickCountSouth, .trickCountWest {
    float: right;
}

@external .gwt-Label;
.gwt-Label, .contractLabel {
    color: white;
}

.contractLink {
    text-transform: lowercase;
    display: inline;
    color: #ffa200;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    padding: .1em .5em;
    margin-left: .5em;
    font-size: 88%;
}

.contractTricks {

}

.contractSuit {
    font-size: 140%;
}

.noTrump {

}

.turnPointerHolder {
    width: 100%;
    height: 100%;
    position: relative;
}

@external .turnPointer;
.turnPointer {
    position: absolute;
    top: 47%;
    left: 47%;
    opacity: 0.2;
}

@external .turnPointerActive;
.turnPointerActive, .turnPointer:hover {
    opacity: 1;
    cursor: pointer;
}

@external .turnPointerEast;
.turnPointerEast {
    left: 515px;
    transform: rotate(0);
    -ms-transform: rotate(0);
    -webkit-transform: rotate(0);
}

@external .turnPointerSouth;
.turnPointerSouth {
    top: 383px;
    transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    -webkit-transform: rotate(90deg);
}

@external .turnPointerWest;
.turnPointerWest {
    left: 5px;
    transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
}

.leftHeader {
    float: left;
}

.rightHeader {
    float: right;
}

.authLabel {
}

.logout {
    display: inline;
    cursor: pointer;
}

.pipe {
    margin: 0 .5em;
    display: inline;
    color: white;
}

.undoLink, .redoLink {
    color: #ededed;
    cursor: pointer;
    font-weight: bold;
    margin: 1em;
    position: relative;
    top: 380px;
}

.undoLink {
    float: left;
}

.redoLink {
    float: right;
}

.sluffButton {
    position: relative;
    top: 45px;
    left: 190px;
}

.topButton {
    margin-right: 8px;
}

